react-app/src/components/layouts/how-to-get-a-video-message/styles.scss
.HowToGetAVideoMessageLayout {
  $gray: rgb(67, 74, 91);

  .container {
    color: $gray;
    @media only screen and (min-width: 992px) {
      display: flex;
      align-items: center;
    }
  }
  &__title {
    color: inherit;
    text-align: center;
    font-weight: bold;
    font-size: 1rem;

    @media only screen and (min-width: 768px) {
      font-size: 1.5rem;
    }

    @media only screen and (min-width: 992px) {
      flex-basis: 60%;
      text-align: left;
    }
  }

  &__steps-list {
    padding: 0;
    list-style-type: none;
    display: flex;
    justify-content: space-between;
    width: 100%;
    max-width: 800px;
  }

  &__step-item {
    @media only screen and (min-width: 768px) {
      text-align: center;
    }
  }

  &__step-number {
    font-size: 1rem;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    font-weight: bold;
    color: white;
    width: 1.5em;
    height: 1.5em;
    border-radius: 50%;
    background-color: $gray;
    margin-bottom: 0.75em;

    &.number {
      &--1 {
        padding-right: 0.035em;
        padding-top: 0.05em;
      }
      &--2 {
        padding-left: 0.025em;
        padding-top: 0.035em;
      }
      &--3 {
        padding-top: 0.04em;
        padding-left: 0.025em;
      }
    }

    @media only screen and (min-width: 768px) {
      font-size: 1.5rem;
    }
  }

  &__step-text {
    color: $gray;
    font-size: 0.65rem;

    @media only screen and (min-width: 768px) {
      font-size: 1rem;
    }
  }
}

